[tool.poetry]
name = "mylogs"
version = "0.1.0"
description = ""
authors = ["samhubs <sameersharma.dc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
